# yolo-traner

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: cvat.yaml  labels_drawing_seg.yaml  labels_page_cls.yaml  model_release.yaml  train_drawing_seg.yaml  train_page_cls.yaml
docs/: annotation_guide.md  model_registry.md  page_classification_guide.md  production_model_install.md  segmentation_guide.md  system_requirements.md  training_guide.md
infra/cvat/: README.md  docker-compose.override.yml  grafana_traefik_any_host.yml  setup_cvat.sh
scripts/: active_learning_candidates.py  build_package.py  build_page_cls_dataset.py  build_seg_dataset_from_cvat.py  clean.py  create_cvat_tasks.py  export_cvat_annotations.py  extract_archives.py  extract_pdf_pages.py  install_models_to_project.py  make_inventory.py  make_thumbnails.py  normalize_images.py  predict_drawing_seg.py  predict_page_cls.py  promote_to_registry.py  tile_seg_dataset.py  train_drawing_seg.py  train_page_cls.py  validate_dataset.py
src/yolo_train/: __init__.py  archive.py  config.py  cvat_client.py  image.py  inventory.py  packaging.py  pdf.py  registry.py  reports.py  splitting.py  tiling.py  training.py  validation.py  yolo_formats.py
tests/: conftest.py  test_archive_safety.py  test_model_package_structure.py  test_split_no_leakage.py  test_yolo_format_validation.py
